--- a/TCP-Chat/TCP-Chat/Views/PersonalChatWindow.xaml
+++ b/TCP-Chat/TCP-Chat/Views/PersonalChatWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TCP_Chat.Views"
         mc:Ignorable="d"
-        Title="PersonalChatWindow" Height="650" Width="850">
+        Title="PersonalChatWindow" Height="700" Width="850">
     <Window.Resources>
         <Style TargetType="TextBox">
             <Setter Property="Height" Value="25"/>
@@ -26,18 +26,22 @@
             <RowDefinition Height="20"/>
             <RowDefinition Height="315"/>
         </Grid.RowDefinitions>
-        <Label FontSize="25" Content="Now chatting with:"/>
-        <Label Margin="220 0 0 0" FontSize="25" Content="{Binding Path=targetUsername}"/>
+        <Label FontSize="25" Margin="0 20 0 0" HorizontalAlignment="Center" Content="Now chatting with:"/>
+        <Label HorizontalAlignment="Center"  Margin="0 100 0 0" FontSize="25" Content="{Binding Path=targetUsername}"/>
+        <Line X1="0" X2="410" Margin="0 200 0 0" Stroke="Black" StrokeThickness="4"/>
         <StackPanel Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="3">
-            <ListView BorderBrush="Gray"  BorderThickness="3"  Height="460"  Grid.RowSpan="3" Width="400"  Name="ChatTextBlock" FontSize="20" ItemsSource="{Binding messages, UpdateSourceTrigger=PropertyChanged}">
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="ListViewItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                    </Style>
-                </ListView.ItemContainerStyle>
+            <ListView BorderBrush="Gray"  BorderThickness="3"  Height="460" ScrollViewer.CanContentScroll="False" Grid.RowSpan="3" Margin="0 20 0 0" Width="400" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Name="ChatTextBlock" FontSize="20" ItemsSource="{Binding messages, UpdateSourceTrigger=PropertyChanged}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <TextBlock Name="msgBlock" Text="{Binding message}" TextWrapping="Wrap" MaxWidth="350" Width="Auto" Height="Auto"/>
+                            <Image Source="{Binding bmpImage}"  Stretch="Uniform"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
 
-            <TextBox Height="70" Width="400" BorderBrush="Black" BorderThickness="2"   x:Name="SendMessageBox" Text="{Binding currentMessage,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"/>
+            <TextBox Height="70" Width="400" BorderBrush="Black" BorderThickness="2" MaxWidth="400" TextWrapping="Wrap" x:Name="SendMessageBox" Text="{Binding currentMessage,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"/>
 
             <Button  HorizontalAlignment="Center" VerticalAlignment="Top"  Content="Send"  Command="{Binding sendCommand}"  Width="400" Height="50" FontSize="30"/>
             <Button Name="btnOpenFile"  Command="{Binding sendFileCommand}">Open file</Button>
